<resources>
    <string name="app_name">PrisonTrainings</string>
    <string name="activity_image_trans">icon_train_transition</string>
    <string name="activity_name_trans">name_train_transition</string>
    <string name="activity_level_trans">level_train_transition</string>
    <string name="activity_needat_trans">level_train_transition</string>
    <string name="btn_start_text">Начать тренировку</string>
    <string name="btn_stat_text">Статистика</string>
    <string name="btn_about_text">О приложении</string>
    <string name="btn_train_next_attempt">Следующий подход</string>
    <string name="btn_train_end_attempt">Закончить упражнение</string>
    <string name="btn_train_clear_result">Сбросить результат</string>
    <string name="text_need_attempt">Нужно выполнить</string>
    <string name="text_my_attempt">Вы сделали</string>
    <string name="text_now_attempt">Текущий подход</string>
    <string name="text_level">Уровень</string>
    <string name="text_type_train">Тип упражнения:</string>
    <string name="snack_more_attempt">Слишком много подходов, не перетрудитесь.</string>
    <string name="snack_null_attempt">Вы не сделали ни одного повторения в текущем подходе</string>
    <string name="snack_next_level">Поздравляем! На следующей тренировке вы перейдёте на новый уровень!</string>
    <string name="dialog_clear_tittle">Обнуление результата</string>
    <string name="dialog_clear_message">Вы уверены что хотите обнулить свой результат?</string>
    <string name="dialog_clear_yes">Обнулить</string>
    <string name="dialog_clear_no">Отмена</string>
    <string name="dialog_repeat_tittle">Повторить тренировку?</string>
    <string name="dialog_repeat_message">Вы уверены что хотите проделать одну тренировку дважды за день, может лучше отдохнуть?</string>
    <string name="dialog_repeat_yes">Повторить</string>
    <string name="dialog_repeat_no">Отдохнуть</string>
    <string name="dialog_save_tittle">Cохранение</string>
    <string name="dialog_save_message">Сохранить результат подходов?</string>
    <string name="dialog_save_yes">Сохранить</string>
    <string name="dialog_save_no">Не сохранять</string>
    <string name="dialog_save_neutral">Отмена</string>
    <string-array name="trainings">
        <item>Отжимания</item>
        <item>Приседания</item>
        <item>Подтягивания</item>
        <item>Подъем ног</item>
        <item>Мосты</item>
        <item>Отжимания в стойке на руках</item>
    </string-array>
    <string name="trening_description_1_1"> Встаньте лицом к стене. Держите ноги сомкнутыми, упритесь ладонями в стену. Это начальная позиция. Ваши руки должны быть выпрямлены и находиться на ширине плеч, на уровне груди. Сгибайте плечи и локти до тех пор, пока не коснётесь лбом стены. Это конечная позиция. Отожмитесь от стены в начальную позицию и повторите. </string>
    <string name="trening_name_1_1">Отжимания от стены</string>
    <string name="trening_attempts_1_1">50-50-50</string>
    <string name="trening_description_1_2">Для выполнения этого упражнения вам потребуется найти безопасный объект или предмет мебели, который высотой примерно с половину вашего роста - желательно чтобы он достигал средней точки вашего тела (округлённо на уровне бёдер). Хорошим вариантом может быть стол, высокий стул, верстак, столешница, низкая стенка или сплошной забор. Держа ноги сомкнутыми, а тело ровным, наклонитесь над объектом и упритесь в него прямыми руками на ширине плеч. Это начальная позиция упражнения и - если объект достигает середины вашего тела - вы должны находиться под углом око- ло 45 градусов от пола. Сгибая локти и плечи, двигайте тело вниз, пока ваш торс не коснётся мягко поверхности объекта. Задержитесь ненадолго внизу перед тем как отжаться назад в стартовую позицию и повторите.</string>
    <string name="trening_name_1_2">Наклонные отжимания</string>
    <string name="trening_attempts_1_2">40-40-40</string>
    <string name="trening_description_1_3">Опуститесь на колени на пол, ноги держите вместе, ладонями упритесь в пол перед собой. Руки должны быть прямыми, на ширине плеч, и находиться на одной линии с грудью. Перекрестите стопы и удерживайте бёдра выровненными относительно туловища и головы. Это начальная позиция. Используя колени как центр вращения, сгибайте плечи и локти пока грудная клетка не окажется примерно на высоте кулака над полом . Задержитесь и отожмитесь назад в начальную позицию, затем повторите</string>
    <string name="trening_name_1_3">Отжимания на коленях </string>
    <string name="trening_attempts_1_3">30-30-30</string>
    <string name="trening_description_1_4">Из позиции стоя на коленях поместите ладони на пол и вытяните ноги от себя. Ваши руки должны быть на ширине плеч и точно ниже верха грудной клетки. Ваши стопы и ноги должны быть сомкнуты вместе. Напрягите удерживающие мышцы таким образом, чтобы спина, бёдра и ноги оставались на одной линии. Начиная с прямых рук, опускайтесь приблизительно на половину высоты выпрямленных рук или пока локти не примут форму прямого угла. Отличным способом установить глубину опускания является использование стандартного баскетбольного или футбольного мяча. Разместитесь над мячом в верхней позиции движения так, чтобы мяч находился точно под пахом. Это начальная позиция. Сгибайте плечи и локти пока ваши бёдра не коснутся мяча. Для большинства людей это будет хорошим, объективным индикатором правильной нижней позиции. Задержитесь перед силовым отжиманием назад в начальную позицию. </string>
    <string name="trening_name_1_4">Половинные отжимания</string>
    <string name="trening_attempts_1_4">25-25</string>
    <string name="trening_description_1_5">Встань на колени, положи ладони на пол и вытяни ноги назад. Сожми бёдра и стопы вместе, убедись, что ладони находятся в нижней части грудной клетки на ширине плеч. Выпрями руки. Бёдра и позвоночник должны быть на одной прямой линии. Это начальная позиция. Сгибай руки в локтях пока грудная клетка не окажется на высоту кулака от пола. В тюремных соревнования по отжиманиям, «счетчик» ставит кулак на пол мизинцем вниз и засчитывает когда атлет касается грудью большого пальца. Если ты тренируешься один и хочешь поддерживать правильную глубину, поставь бейсбольный или теннисный мяч точно пониже груди. Как поцелуешь грудью мяч - сделай паузу и отожмись вверх</string>
    <string name="trening_name_1_5">Полные отжимания</string>
    <string name="trening_attempts_1_5">20-20</string>
    <string name="trening_description_1_6">Начинай эту технику из того же верхнего положения, что и полные отжимания (Уровень 5), но руки касаются друг друга. Тебе не обязательно накладывать руки друг на друга или делать «бриллиант» между большими и указательными пальцами рук, достаточно чтобы кончики указательных пальцев касались. Из позиции с выпрямленными руками  опускайся пока грудью слегка не коснёшься обратной стороны ладоней. Задержись ненадолго перед отжиманием назад в начальное положение. </string>
    <string name="trening_name_1_6">Плотные отжимания</string>
    <string name="trening_attempts_1_6">20-20</string>
    <string name="trening_description_1_7">Прими классическую позицию для отжиманий, стопы сомкнуты, ноги, бёдра, спина выровнены и руки выпрямлены с ладонями на полу на уровне нижней части грудной клетки. Опираясь на одну руку, помести другую руку на баскетбольный мяч. Обе руки должны быть непосредственно под плечами для равновесия. Это начальное положение. Когда найдёшь положение равновесия сделай всё возможное, чтобы равномерно распределить свой вес на обе руки. Сначала это покажется непросто, прояви упорство. Сгибай в локтях руки пока грудью не коснёшься той руки, которая на мяче. Задержись недолго перед отжиманием назад в начальную позицию</string>
    <string name="trening_name_1_7">Неравномерные отжимания</string>
    <string name="trening_attempts_1_7">20-20</string>
    <string name="trening_description_1_8">Займи верхнюю позицию половинных отжиманий с баскетбольным мячом помещённым под пах, как описано на Уровне 4. Упрись одной рукой в пол напротив груди, а другую руку заведи за спину и положи на поясницу. Это начальная позиция. Сгибай руку пока не коснёшься мяча. Это конечная позиция. Задержись и отожмись назад в начальную позицию. Если трицепсы слабые, у тебя появится тенденция к скручиванию тела при движении. Не делай так - тело всегда должно быть полностью прямым. Это справедливо для всех отжиманий.</string>
    <string name="trening_name_1_8">Половинные отжимания на одной руке</string>
    <string name="trening_attempts_1_8">20-20</string>
    <string name="trening_description_1_9">Прими позу для отжиманий, когда тело выпрямлено и удерживается ногами и одной рукой упирающейся в пол на уровне груди. Помести свободную руку на баскетбольный мяч, который вынесен в сторону от тела. Он должен быть так далеко от тела, насколько можешь отодвинуть его пока ладонь ещё держится на нём. Обе руки должны быть выпрямлены. Это начальная позиция. Медленно, контролируя своё движение опускайся вниз пока грудь не окажется на высоте кулака от пола. Как и в полных отжиманиях можешь использовать бейсбольный или теннисный мячик для проверки глубины если занимаешься один. Опускание тела будет заставлять мяч откатываться дальше в сторону. Задержись ненадолго в нижнем положении, затем отожмись в начальное положение</string>
    <string name="trening_name_1_9">Рычажные отжимания</string>
    <string name="trening_attempts_1_9">20-20</string>
    <string name="trening_description_1_10">Опустись на колени, поставь ладонь на пол прямо перед собой. Вытягивай ноги назад, пока они не выпрямятся и не упрёшься на носки. Держи позвоночник и бёдра выровненными и перемести вес тела так, чтобы твоя поддерживающая рука выпрямилась точно под грудной клеткой - без смещения вбок или вперёд от себя. Как найдёшь равновесие, заведи свободную за спину на поясницу. Это начальная позиция. Сгибай руку в локте, опускайся полностью контролируя движение, пока челюсть не окажется приблизительно на высоте кулака от пола. Задержись на мгновение перед тем как отжаться в исходную позицию. </string>
    <string name="trening_name_1_10">Отжимания на одной руке</string>
    <string name="trening_attempts_1_10">100</string>
    <string name="trening_description_2_1">Лягте на спину с согнутыми коленями. Оттолкнитесь от пола, поддержите руками свои ноги и остановитесь в воздухе. Как достигните это положение, то поместите руки на поясницу для поддерживания, держа плечи твердо на полу. Вы будете в положении плечами на полу, опираясь плечами и верхней частью спины, а так же задними поверхностью плеч. Не забывайте постоянно поддерживать свой вес и избегать давление на шею. Ваше тело должно быть зафиксировано в прямом положении, не сгибаясь в бедрах. Это - исходное положение. Держа туловище максимально вертикально, согнитесь в бедрах и коленях, пока колени не коснутся лба. Это - конечное положение. Выпрямитесь и вернитесь в исходное положение. Повторите упражнение.</string>
    <string name="trening_name_2_1"> Плечи на полу</string>
    <string name="trening_attempts_2_1">50-50-50</string>
    <string name="trening_description_2_2">Встаньте перед крепким объектом, который вровень с вашими коленями, или по крайней мере выше голеней. Маленький журнальный столик, стул или койка - хороший выбор. Ваши ноги должны быть на ширине плеч, или немного шире. Держа ноги довольно прямо, согнитесь в бедрах, пока ваши ладони не дотронутся с объектом. Наклонитесь вперед немного так, чтобы вы могли перенести часть веса своего тела на ваши руки. Это - исходное положение. Теперь, сохраняя туловище максимально параллельным полу, согнитесь в коленях и бедрах, пока ваши подколенные сухожилия не достигают ваших голеней, и вы не можете пойти дальше. Это потребует сгибания руки. Это - конечное положение . Используя совместную силу ног и рук, поднимитесь в исходное положение. Во время выполнения упражнения, не поднимайте пятки ни в коем случае. </string>
</resources>