<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_train_now"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/im_training"
        android:layout_width="126dp"
        android:layout_height="126dp"
        app:srcCompat="@mipmap/ic_launcher"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:transitionName="@string/activity_image_trans"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/tv_tr_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="0dp"
        android:text="TextView"
        android:transitionName="@string/activity_name_trans"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/im_training"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/im_training"
        android:textSize="@dimen/big_text_size"
        tools:text="t1" />

    <TextView
        android:id="@+id/tv_tr_level"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:transitionName="@string/activity_level_trans"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/im_training"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tr_name"
        android:textSize="@dimen/big_text_size"
        tools:text="t2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_need_attempt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/im_training"
        tools:text="Нужно выполнить"
        app:layout_constraintHorizontal_bias="0.0"
        android:textSize="@dimen/midle_text_size"/>

    <TextView
        android:id="@+id/tv_need_attempts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textSize="@dimen/big_text_size"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:text="10-10-10-10" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="7dp"
        android:text="@string/text_my_attempt"
        android:textSize="@dimen/midle_text_size"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_need_attempts"
        tools:text="Вы сделали" />

    <TextView
        android:id="@+id/tv_my_attempts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:textSize="@dimen/big_text_size"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:text="10-10" />

    <TextView
        android:id="@+id/tv_now_attempts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="26dp"
        android:text="Текущий подход"
        android:textSize="@dimen/big_text_size"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_my_attempts"
        tools:text="@string/text_now_attempt" />

    <NumberPicker
        android:id="@+id/np_num_attempts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_now_attempts" />

    <Button
        android:id="@+id/btn_next_attempt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="-82dp"
        android:text="@string/btn_train_next_attempt"
        android:textColor="@color/colorIcons"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/np_num_attempts"
        app:layout_constraintLeft_toRightOf="@+id/np_num_attempts"
        app:layout_constraintHorizontal_bias="0.628"
        tools:text="Следующий подход"/>

    <Button
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:id="@+id/btn_end_attempts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btn_train_end_attempt"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/np_num_attempts"
        app:layout_constraintHorizontal_bias="0.674"
        tools:text="Закончить упражнение"/>

    <ImageView
        android:id="@+id/im_check_training"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:src="@mipmap/ic_done_black_24dp"
        android:tint="@color/colorGreen"
        android:visibility="invisible"
        app:layout_constraintLeft_toRightOf="@+id/tv_need_attempts"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/btn_clear_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_train_clear_result"
        android:textColor="@color/colorIcons"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/np_num_attempts"
        app:layout_constraintTop_toBottomOf="@+id/btn_next_attempt"
        app:layout_constraintBottom_toTopOf="@+id/btn_end_attempts"
        app:layout_constraintHorizontal_bias="1.0" />

</android.support.constraint.ConstraintLayout>